# context_aware_if_robotics_demo

./: .gitignore  README.md
src/adaptive_controller/: CMakeLists.txt  README.md  package.xml  setup.py
src/adaptive_controller/action/: TaskRequest.action
src/adaptive_controller/asp/: context.lp  controller.lp  map.lp  minimal.lp  oldController.lp  semantic_map  semantic_map.lp
src/adaptive_controller/launch/: adaptive_controller.launch  contextMiddleware.launch  controller.launch
src/adaptive_controller/msg/: ActionFeedback.msg  ActionRequest.msg  ContextInput.msg  ContextModel.msg  ContextROI.msg  ContextROIs.msg
src/adaptive_controller/scripts/: actionsFulfiller.py  contextCommunication.py  contextMiddleware.py  contextNode.py  gringoParser.py  icontroller.py  iroscontext.py  iroshandler.py  irun.py  minimalRequest.py  rosoclingoCommunication.py  testInput.py  testOutput.py
src/adaptive_controller/src/topologicalGraph/: topological_graph.lp
src/adaptive_controller/src/topologicalGraph/src/: CMakeLists.txt  topological_graph.cpp  topological_graph.h
src/adaptive_controller/src/topologicalGraph/src/utils/: a_star.cpp  a_star.cpp.autosave  a_star.h  basic_drawing.cpp  basic_drawing.h  utils.cpp  utils_proximity.cpp
src/laser_analysis/: CMakeLists.txt
src/laser_analysis/launch/: laserobstacle.launch
src/laser_analysis/msg/: LaserObstacle.msg  LaserObstacleMap.msg
src/laser_analysis/src/: laserdata.cpp  laserobstacle.cpp  laserviewer.cpp
src/people_detector/: CMakeLists.txt  package.xml
src/people_detector/launch/: people_detector.launch
src/people_detector/src/: people_detector.cpp  people_detector.hpp
src/stage_environments/config/sapienzbot/navigation/: base_local_planner_params.yaml
src/stage_environments/launch/: stage_robot.launch
src/stage_environments/scripts/: start_simulation.py
src/top_graph_handler/: CMakeLists.txt  package.xml
src/top_graph_handler/launch/: top_graph_handler.launch
src/top_graph_handler/src/: top_graph_handler.cpp  top_graph_handler.hpp
src/top_graph_handler/src/TopologicalGraphGenerator/: topological_graph.lp
src/top_graph_handler/src/TopologicalGraphGenerator/src/: CMakeLists.txt  topological_graph.cpp  topological_graph.h
src/top_graph_handler/src/TopologicalGraphGenerator/src/utils/: a_star.cpp  a_star.h  basic_drawing.cpp  basic_drawing.h  point.h  utils.h  utils_proximity.h
src/topologicalGraph/: topological_graph.cpp  topological_graph.h
src/topologicalGraph/utils/: a_star.cpp  a_star.h  basic_drawing.cpp  basic_drawing.h  point.cpp  point.h  utils.h
src/turtlebot_setup/: README~
src/turtlebot_setup/.svn/: wc.db
src/turtlebot_setup/launch/: if_adaptive.launch  mapping.launch~  navigation.launch  stage_navigation.launch  thesis.launch  thesis.launch~  turtlebot_stage.launch
src/turtlebot_setup/launch/includes/: gmapping.launch.xml~
src/turtlebot_setup/launch/navigation/: map_server.launch  map_server.launch~
src/turtlebot_setup/maps/: DIAG_B1.world  fub_map (copy).pgm  fub_map (copy).yaml  fub_map.pgm  lab.pgm
src/way_point_navigation/: CMakeLists.txt  package.xml
src/way_point_navigation/config/dwa_navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
src/way_point_navigation/config/localization/: amcl_node.xml
src/way_point_navigation/config/navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
src/way_point_navigation/config/paths/: robot_0.path  robot_1.path  robot_1.path.RIGHT_PATH
src/way_point_navigation/launch/: frames.gv  map.launch  stage.launch  way_point_2_robots_navigation_stage.launch  way_point_3_robots_navigation_stage.launch  way_point_4_robots_navigation_stage.launch  way_point_navigation_sapienzbot.launch  way_point_navigation_stage.launch  way_point_navigation_turtlebot.launch
src/way_point_navigation/maps/: DIAG_B1.world  DIS_first_floor.world  DISlabs.pgm  DISlabs.world  erratic.inc  if_adaptive.world  if_adaptive.yaml
src/way_point_navigation/src/: way_point_navigation.cpp  way_point_navigation.hpp
src/way_point_navigation/src/utils/: topics.h  utils.cpp  utils.h
