<?xml version="1.0"?>
<package>
  <name>top_graph_handler</name>
  <version>0.0.0</version>
  <description>The top_graph_handler package</description>
  <maintainer email="francesco@todo.todo">francesco</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>genmsgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>adaptive_controller</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>genmsgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>adaptive_controller</run_depend>
  <run_depend>message_generations</run_depend>
  <export>
  </export>

</package>
